Fix scrollbar interaction with asks

--- a/styles/pages/asks.module.scss
+++ b/styles/pages/asks.module.scss
@@ -19,7 +19,7 @@
 		gap: 2rem;
 		box-sizing: border-box;
 		padding-top: 0.5rem;
-		padding-left: 0.5rem;
+		padding-inline: 0.5rem;
 		justify-content: center;
 		align-content: flex-start;
 
